examples: Use shorter form of event binding in GPX

--- a/examples/gpx.html
+++ b/examples/gpx.html
@@ -12,8 +12,8 @@
 var map = new L.Map('map', {center: new L.LatLng(58.4, 43.0), zoom: 11});
 var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
 
-var track = new L.GPX("fells_loop.gpx", {async: true});
-track.on("loaded", function(e) { map.fitBounds(e.target.getBounds()); });
+var track = new L.GPX("fells_loop.gpx", {async: true})
+			.on("loaded", function(e) { map.fitBounds(e.target.getBounds()); });
 
 map.addLayer(track);
 map.addLayer(osm);
