--- a/examples/osb.html
+++ b/examples/osb.html
@@ -11,16 +11,12 @@
 </head>
 </head>
 <body>
-	<!-- define a DIV into which the map will appear. Make it take up the whole window -->
-	<div style="width:100%; height:100%" id="map"></div>
-    <script type='text/javascript'>
-    </script>
+    <div style="width:100%; height:100%" id="map"></div>
     <script type="text/javascript">
 
-var map = new L.Map('map', {center: new L.LatLng(58.4, 43.0), zoom: 11});
-var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+var map = new L.Map('map', {center: new L.LatLng(57.62, 39.89), zoom: 11});
 
-map.addLayer(osm);
+map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));
 map.addLayer(new L.OpenStreetBugs());
 
 </script>
