--- a/examples/distance.html
+++ b/examples/distance.html
@@ -9,6 +9,8 @@
     <script src="/leaflet/leaflet.js"></script>
     <script src="../layer/vector/GPX.js"></script>
     <script src="../control/Scale.js"></script>
+    <script src="../control/Permalink.js"></script>
+    <script src="../control/Permalink.Line.js"></script>
     <script src="../control/Distance.js"></script>
 </head>
 </head>
@@ -24,8 +26,9 @@ var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
 
 map.addLayer(osm);
 map.addControl(new L.Control.Layers({}, {}));
-map.addControl(new L.Control.Distance());
+var d = new L.Control.Distance(); map.addControl(d);
 map.addControl(new L.Control.Scale());
+map.addControl(new L.Control.Permalink({line: d.getLine()}));
 
 </script>
 </body>
