--- a/examples/deferred.html
+++ b/examples/deferred.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>Leaflet</title>
-	<link rel="stylesheet" href="/leaflet/leaflet.css" />
-	<script src="/leaflet/leaflet.js"></script>
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+	<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 	<!--<script src="http://api-maps.yandex.ru/2.0/?load=package.map&lang=ru-RU" type="text/javascript"></script>-->
 	<script src="../layer/Layer.Deferred.js"></script>
 	<!--<script src="../layer/tile/Yandex.js"></script>-->
