--- a/examples/distance.html
+++ b/examples/distance.html
@@ -4,9 +4,9 @@
   -->
 <head>
     <title>Leaflet</title>
-    <link rel="stylesheet" href="/leaflet/leaflet.css" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
     <link rel="stylesheet" href="../css/distance.css" />
-    <script src="/leaflet/leaflet.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
     <script src="../layer/vector/GPX.js"></script>
     <script src="../control/Scale.js"></script>
     <script src="../control/Permalink.js"></script>
