--- a/examples/google.html
+++ b/examples/google.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>OpenStreetMap // Leaflet</title>
-	<link rel="stylesheet" href="/leaflet/leaflet.css" />
-	<script src="/leaflet/leaflet.js"></script>
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+	<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 	<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
 	<script src="../layer/tile/Google.js"></script>
 </head>
