--- a/examples/distance.html
+++ b/examples/distance.html
@@ -6,7 +6,9 @@
     <title>Leaflet</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
     <link rel="stylesheet" href="../css/distance.css" />
+    <link rel="stylesheet" href="http://leaflet.github.io/Leaflet.draw/leaflet.draw.css" />
     <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+    <script src="http://leaflet.github.io/Leaflet.draw/leaflet.draw.js"></script>
     <script src="../layer/vector/GPX.js"></script>
     <script src="../control/Scale.js"></script>
     <script src="../control/Permalink.js"></script>
