add example how to change Bing's imagery set

--- a/examples/bing.html
+++ b/examples/bing.html
@@ -10,7 +10,12 @@
       <script type='text/javascript'>
         var map = new L.Map('map', {center: new L.LatLng(67.6755, 33.936), zoom: 10 });
         var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-        var bing = new L.BingLayer("Anqm0F_JjIZvT0P3abS6KONpaBaKuTnITRrnYuiJCE0WOhH6ZbE4DzeT6brvKVR5");
+
+        // for all possible values and explanations see "Template Parameters" in https://msdn.microsoft.com/en-us/library/ff701716.aspx
+        imagerySet = "Aerial"; // AerialWithLabels | Birdseye | BirdseyeWithLabels | Road
+
+        var bing = new L.BingLayer("Anqm0F_JjIZvT0P3abS6KONpaBaKuTnITRrnYuiJCE0WOhH6ZbE4DzeT6brvKVR5", {type: imagerySet});
+
         map.addLayer(bing);
         map.addControl(new L.Control.Layers({'OSM':osm, "Bing":bing}, {}));
       </script>
