--- a/examples/google-custom.html
+++ b/examples/google-custom.html
@@ -3,7 +3,7 @@
 	<title>Google Custom Styles // Leaflet</title>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
-	<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
+	<script src="http://maps.google.com/maps/api/js?v=3"></script>
 	<script src="../layer/tile/Google.js"></script>
 </head>
 <body>
