--- a/examples/marker-rotate.html
+++ b/examples/marker-rotate.html
@@ -2,6 +2,17 @@
 <head>
 	<title>Leaflet</title>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<style>
+		/* Animates marker movements */
+		.leaflet-marker-pane > *,
+		.leaflet-shadow-pane > * {
+			-webkit-transition: transform 1.0s linear;
+			-moz-transition: transform 1.0s linear;
+			-o-transition: transform 1.0s linear;
+			-ms-transition: transform 1.0s linear;
+			transition: transform 1.0s linear;
+		}
+	</style>
 	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 	<script src="../layer/Marker.Rotate.js"></script>
 </head>
