--- a/examples/deferred.html
+++ b/examples/deferred.html
@@ -14,29 +14,13 @@
 var map = new L.Map('map', {center: new L.LatLng(67.6755, 33.936), zoom: 10, zoomAnimation: false });
 var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
-function getYourOwnKey (key) {
-	if (!key)
-		console.error(`
-			GOOGLE MAPS NO LONGER WORKS WITHOUT AN API KEY (w ASYNC LOADING). You must supply!
-			Since your loading it async, they must think your a business.
-
-			Add a key and see that it works :)
-			`
-		);
-
-	return key;
-}
-
 var layerdefs = {
 	mapnik: { name: "Mapnik", js: [],
 		init: function() {return new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');}},
 	kosmo: { name: "Космоснимки", js: [],
 		init: function() {return new L.TileLayer('http://{s}.tile.osmosnimki.ru/kosmo/{z}/{x}/{y}.png', {attribution:'Tiles Courtesy of <a href="http://kosmosnimki.ru/" target="_blank">kosmosnimki.ru</a>'});}},
-	gsat: { name: "Google", js: ["../layer/tile/Google.js", "http://maps.google.com/maps/api/js?v=3&key=" + getYourOwnKey() + "callback=L.Google.isGoogleMapsReady"],
-		init: function() {
-			return new L.Google();
-		}
-	},
+	gsat: { name: "Google", js: ["../layer/tile/Google.js", "http://maps.google.com/maps/api/js?v=3&callback=L.Google.asyncInitialize"],
+		init: function() {return new L.Google(); }},
 	ysat: { name: "Yandex", js: ["../layer/tile/Yandex.js", "http://api-maps.yandex.ru/2.0/?load=package.map&lang=ru-RU"],
 		init: function() {return new L.Yandex("satellite"); }},
 	nyak: { name: "НЯК", js: ["../layer/tile/Yandex.js", "http://api-maps.yandex.ru/2.0/?load=package.map&lang=ru-RU"],
