--- a/examples/distance.html
+++ b/examples/distance.html
@@ -1,13 +1,10 @@
 <html>
-<!--
-  vim: sts=4 sw=4 et
-  -->
 <head>
     <title>Leaflet</title>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <link rel="stylesheet" href="../css/distance.css" />
     <link rel="stylesheet" href="http://leaflet.github.io/Leaflet.draw/leaflet.draw.css" />
-	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<script src="http://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
     <script src="http://leaflet.github.io/Leaflet.draw/leaflet.draw.js"></script>
     <script src="../layer/vector/GPX.js"></script>
     <script src="../control/Scale.js"></script>
