--- a/examples/kml.html
+++ b/examples/kml.html
@@ -1,24 +1,22 @@
 <html>
 <head>
 	<title>Leaflet</title>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+	<script src="http://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
 	<script src="../layer/vector/KML.js"></script>
 </head>
 <body>
-	<!-- define a DIV into which the map will appear. Make it take up the whole window -->
 	<div style="width:100%; height:100%" id="map"></div>
-<script type='text/javascript'>
-var map = new L.Map('map', {center: new L.LatLng(58.4, 43.0), zoom: 11});
-var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-
-var track = new L.KML("KML_Samples.kml", {async: true});
-track.on("loaded", function(e) { map.fitBounds(e.target.getBounds()); });
-
-map.addLayer(track);
-map.addLayer(osm);
-map.addControl(new L.Control.Layers({}, {'Track':track}));
-</script>
- 
+	<script type='text/javascript'>
+		var map = new L.Map('map', {center: new L.LatLng(58.4, 43.0), zoom: 11});
+		var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+		var track = new L.KML("KML_Samples.kml", {async: true});
+		track.on("loaded", function(e) {
+			map.fitBounds(e.target.getBounds());
+		});
+		map.addLayer(track);
+		map.addLayer(osm);
+		map.addControl(new L.Control.Layers({}, {'Track':track}));
+	</script>
 </body>
 </html>
