--- a/examples/marker-rotate.html
+++ b/examples/marker-rotate.html
@@ -1,38 +1,31 @@
 <html>
 <head>
 	<title>Leaflet</title>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
 	<style>
 		/* Animates marker movements */
 		.leaflet-marker-pane > *,
 		.leaflet-shadow-pane > * {
-			-webkit-transition: transform 1.0s linear;
-			-moz-transition: transform 1.0s linear;
-			-o-transition: transform 1.0s linear;
-			-ms-transition: transform 1.0s linear;
 			transition: transform 1.0s linear;
 		}
 	</style>
-	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<script src="http://unpkg.com/leaflet@1.0.1/dist/leaflet-src.js"></script>
 	<script src="../layer/Marker.Rotate.js"></script>
 </head>
 <body>
 	<div style="width:100%; height:100%" id="map"></div>
-<script type='text/javascript'>
-var map = new L.Map('map', {center: new L.LatLng(67.6755, 33.936), zoom: 10});
-map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));
-
-var marker = new L.Marker(map.getCenter(), {iconAngle: 90});
-map.addLayer(marker);
-
-var angle = 0;
-function _rotate() {
-	marker.setIconAngle(angle);
-	angle = (angle + 10) % 360;
-	setTimeout(_rotate, 1000);
-}
-_rotate();
-</script>
- 
+	<script type='text/javascript'>
+	var map = new L.Map('map', {center: new L.LatLng(67.6755, 33.936), zoom: 10});
+	map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));
+	var marker = new L.Marker(map.getCenter(), {iconAngle: 90});
+	map.addLayer(marker);
+	var angle = 0;
+	function _rotate() {
+		marker.setIconAngle(angle);
+		angle = (angle + 10) % 360;
+		setTimeout(_rotate, 1000);
+	}
+	_rotate();
+	</script>
 </body>
 </html>
