--- a/examples/marker-text.html
+++ b/examples/marker-text.html
@@ -1,21 +1,18 @@
 <html>
 <head>
 	<title>Leaflet</title>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+	<script src="http://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
 	<script src="../layer/Marker.Text.js"></script>
 </head>
 <body>
 	<div style="width:100%; height:100%" id="map"></div>
-<script type='text/javascript'>
-var map = new L.Map('map', {center: new L.LatLng(67.66904, 33.68595), zoom: 10});
-map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));
-
-var marker = new L.Marker.Text(map.getCenter(), 'Sweet!');
-map.addLayer(new L.Marker(map.getCenter(), {opacity: 0.5}));
-map.addLayer(marker);
-
-</script>
- 
+	<script type='text/javascript'>
+		var map = new L.Map('map', {center: new L.LatLng(67.66904, 33.68595), zoom: 10});
+		map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));
+		var marker = new L.Marker.Text(map.getCenter(), 'Sweet!');
+		map.addLayer(new L.Marker(map.getCenter(), {opacity: 0.5}));
+		map.addLayer(marker);
+	</script>
 </body>
 </html>
