update distance examples deps + cleanup & simplification

--- a/examples/distance.html
+++ b/examples/distance.html
@@ -3,9 +3,9 @@
     <title>Leaflet</title>
 	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <link rel="stylesheet" href="../css/distance.css" />
-    <link rel="stylesheet" href="http://leaflet.github.io/Leaflet.draw/leaflet.draw.css" />
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.0/leaflet.draw.css" />
 	<script src="http://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-    <script src="http://leaflet.github.io/Leaflet.draw/leaflet.draw.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.0/leaflet.draw.js"></script>
     <script src="../layer/vector/GPX.js"></script>
     <script src="../control/Scale.js"></script>
     <script src="../control/Permalink.js"></script>
@@ -13,20 +13,13 @@
     <script src="../control/Distance.js"></script>
 </head>
 <body>
-	<!-- define a DIV into which the map will appear. Make it take up the whole window -->
 	<div style="width:100%; height:100%" id="map"></div>
-    <script type='text/javascript'>
-    </script>
     <script type="text/javascript">
-
-var map = new L.Map('map', {center: new L.LatLng(58.4, 43.0), zoom: 11});
-var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-
-map.addLayer(osm);
-var d = new L.Control.Distance(); map.addControl(d);
-map.addControl(new L.Control.Scale());
-map.addControl(new L.Control.Permalink({line: d.getLine(), useLocation: true}));
-
-</script>
+		var map = L.map('map', {center: new L.LatLng(58.4, 43.0), zoom: 11});
+		L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+		var d = L.control.distance().addTo(map);
+		L.control.scale().addTo(map);
+		map.addControl(new L.Control.Permalink({line: d.getLine(), useLocation: true}));
+	</script>
 </body>
 </html>
