--- a/examples/distance.html
+++ b/examples/distance.html
@@ -1,20 +1,9 @@
 <html>
 <head>
-    <title>Leaflet</title>
-	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="../css/distance.css" />
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.0/leaflet.draw.css" />
-	<script src="http://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.0/leaflet.draw.js"></script>
-    <script src="../control/Distance.js"></script>
+    <title>Leaflet Control Distance</title>
 </head>
 <body>
-	<div style="width:100%; height:100%" id="map"></div>
-    <script type="text/javascript">
-		var map = L.map('map', {center: new L.LatLng(58.4, 43.0), zoom: 11});
-		L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-		var d = L.control.distance().addTo(map);
-		L.control.scale().addTo(map);
-	</script>
+<p>See <a href="https://github.com/jacobtoye/Leaflet.measure">Leaflet.measure</a> or 
+<a href="https://github.com/makinacorpus/Leaflet.MeasureControl">Leaflet.MeasureControl</a></p>
 </body>
 </html>
