fix osm layer demo
add osm test file taken from http://psha.org.ru/tmp/02%3a62%3a0010810.osm

--- a/examples/osm.html
+++ b/examples/osm.html
@@ -10,7 +10,7 @@
 	<script type='text/javascript'>
 		var map = new L.Map('map', { center: new L.LatLng(55.7, 37.6), zoom: 9, zoomAnimation: false});
 		map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));
-		var layer = new L.OSM('ulugo.osm').on("loaded", function(e) {
+		var layer = new L.OSM('test.osm').on("loaded", function(e) {
 			map.fitBounds(e.target.getBounds());
 		});
 		map.addLayer(layer);
