--- a/examples/yandex.html
+++ b/examples/yandex.html
@@ -1,23 +1,43 @@
 <html>
 <head>
-	<title>Leaflet</title>
-	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-	<script src="http://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-	<script src="http://api-maps.yandex.ru/2.0/?load=package.map&lang=ru-RU" type="text/javascript"></script>
+	<title>L.Yandex example</title>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+	<script src="https://api-maps.yandex.ru/2.0/?load=package.map&lang=ru-RU" type="text/javascript"></script>
 	<script src="../layer/tile/Yandex.js"></script>
 </head>
 <body>
-	<div style="width:100%; height:100%" id="map"></div>
-<script type='text/javascript'>
-var map = new L.Map('map', {center: new L.LatLng(67.6755, 33.936), zoom: 10, zoomAnimation: false });
-var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-var yndx = new L.Yandex();
-var ytraffic = new L.Yandex("null", {traffic:true, opacity:0.8, overlay:true});
 
-map.addLayer(osm);
-map.addLayer(ytraffic);
-map.addControl(new L.Control.Layers({'OSM':osm, "Yandex":yndx},
-				    {"Traffic":ytraffic}));
+<div style="width:100%; height:100%" id="map"></div>
+
+<script>
+	var center = [67.6755, 33.936];
+
+	var map = L.map('map', {
+		center: center,
+		zoom: 10,
+		zoomAnimation: false
+	});
+
+	var overlays = {
+		'Traffic overlay': L.yandex('overlay', { traffic:true, opacity:0.8, overlay:true })
+	};
+
+	var baseLayers = {
+		'Yandex map': L.yandex()
+			.addTo(map),
+		'Yandex satellite': L.yandex('satellite'),
+		'Yandex hybrid': L.yandex('hybrid'),
+		'Yandex + Traffic': L.yandex('map', { traffic: true }),
+		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png')
+	};
+
+	L.control.layers(baseLayers, overlays).addTo(map);
+	var marker = L.marker(center, { draggable: true }).addTo(map);
+	map.locate({ setView: true, maxZoom: 14 })
+		.on('locationfound',function (e) {
+			marker.setLatLng(e.latlng);
+		});
 </script>
  
 </body>
