L.Yandex: do not try to override controls panel margins
It's bad practice, and may conflict with other leaflet controls, css, and actual developer intentions.
And it even do not work in some cases, e.g. when 2 yandex layers added, and then remove 1.

Besides, we do not need two attribution controls anyway (and it looks ugly).
It'd be better to gather all info in 1 (either Yandex's, either Leaflet's), and there is API for this.

Choosing appropriate decision is up on developer now.
If he want to change margins - let him do this explicitely.
And there are plenty of other options, among them:
- move attribution control to other corner
- disable attribution control completely
- implement dynamic attribution fetching from one control to another

--- a/examples/yandex.html
+++ b/examples/yandex.html
@@ -5,6 +5,10 @@
 	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=en_RU&amp;apikey=<your API-key>" type="text/javascript"></script>
 	<script src="../layer/tile/Yandex.js"></script>
+	<style>
+		.leaflet-bottom { bottom: 20px }
+		.leaflet-control-attribution { margin-bottom: -10px !important }
+	</style>
 </head>
 <body>
 
@@ -19,6 +23,10 @@
 		zoomAnimation: false
 	});
 
+	map.attributionControl
+		.setPosition('bottomleft')
+		.setPrefix('');
+
 	var overlays = {
 		'Traffic overlay': L.yandex('overlay', { trafficControl: true })
 	};
@@ -29,7 +37,9 @@
 		'Yandex satellite': L.yandex('satellite'),
 		'Yandex hybrid': L.yandex('hybrid'),
 		'Yandex + Traffic': L.yandex('map', { trafficControl: true }),
-		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png')
+		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+		})
 	};
 
 	L.control.layers(baseLayers, overlays).addTo(map);
