L.Yandex: refactor; simplify overlay API
* remove overlay option, it's now controlled by 'overlay' map type
  - opacity for overlay is handled automatically
    but (for compatibility reasons) `opacity` option is still able to override default value
  - background is now transparent for all map types, but this can be canceled by `background` option

* simplify map type handling
  Note: 'publicMap' and 'publicMapHybrid' are valid map types,
  but currently they are identical to 'map' and 'hybrid'

--- a/examples/yandex.html
+++ b/examples/yandex.html
@@ -20,7 +20,7 @@
 	});
 
 	var overlays = {
-		'Traffic overlay': L.yandex('overlay', { traffic:true, opacity:0.8, overlay:true })
+		'Traffic overlay': L.yandex('overlay', { traffic: true })
 	};
 
 	var baseLayers = {
