L.Yandex: upgrade to ymaps JSAPI 2.1
* JSAPI 2.0 is not supported anymore.
  It would need complex handling to keep it working with both api sets.

* Simplify `_initMapObject` as new api is able to auto-load required modules

* replace `traffic` option with `trafficControl`

* add `mapOptions` option: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Map-docpage/#Map__param-options
  Refs:
    https://tech.yandex.ru/maps/jsapi/doc/2.1/ref/reference/Map-docpage/#Map__param-options.suppressMapOpenBlock
    https://tech.yandex.com/maps/jsapi/doc/2.1/ref/reference/Map-docpage/#Map__param-options.yandexMapDisablePoiInteractivity
    https://tech.yandex.com/maps/jsapi/doc/2.1/ref/reference/Balloon-docpage/#Balloon__param-options.autoPan
    auto pan should be disabled to prevent uncoordinated layers offset (or we may just disable poi interactivity to avoid balloon handling)

* add two new map types to cover all existing layer types (see ymaps.layer.storage)

---
@class L.Yandex
@inherits L.Layer
Used to load and display tile layers on the map using Yandex JSAPI 2.1
https://tech.yandex.com/maps/doc/jsapi/2.1/quick-start/index-docpage/

@example

```js
L.yandex('yandex#satellite'}).addTo(map);
```

@section Map type
@example

Possible basemap types: `yandex#map`, `yandex#satellite`, `yandex#hybrid`, `yandex#map~vector`
or their short names: `map`, `satellite`, `hybrid`, `map~vector`

Possible overlay types:
`overlay` - empty transparent map, which can be used for displaying data provided e.g. by controls.
`skeleton` - roads and labels, like in `hybrid` (but w/o basemap).

@event MapObjectInitialized: Event
Fired after Yandex map object is initialized.
Event listener receives object containing `mapObject` property.

@option mapOptions: Object (see in sources)
Options to set on map creation:
https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Map-docpage/#Map__param-options

@option overlayOpacity: Number = 0.8
Opacity used for map type `overlay`.

@option opacity

--- a/examples/yandex.html
+++ b/examples/yandex.html
@@ -3,7 +3,7 @@
 	<title>L.Yandex example</title>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
 	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
-	<script src="https://api-maps.yandex.ru/2.0/?load=package.map&lang=ru-RU" type="text/javascript"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=en_RU&amp;apikey=<your API-key>" type="text/javascript"></script>
 	<script src="../layer/tile/Yandex.js"></script>
 </head>
 <body>
@@ -20,7 +20,7 @@
 	});
 
 	var overlays = {
-		'Traffic overlay': L.yandex('overlay', { traffic: true })
+		'Traffic overlay': L.yandex('overlay', { trafficControl: true })
 	};
 
 	var baseLayers = {
@@ -28,7 +28,7 @@
 			.addTo(map),
 		'Yandex satellite': L.yandex('satellite'),
 		'Yandex hybrid': L.yandex('hybrid'),
-		'Yandex + Traffic': L.yandex('map', { traffic: true }),
+		'Yandex + Traffic': L.yandex('map', { trafficControl: true }),
 		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png')
 	};
 
