L.Yandex: implement zoom animation

--- a/examples/yandex.html
+++ b/examples/yandex.html
@@ -20,7 +20,7 @@
 	var map = L.map('map', {
 		center: center,
 		zoom: 10,
-		zoomAnimation: false
+		zoomAnimation: true
 	});
 
 	map.attributionControl
