--- a/examples/bing.html
+++ b/examples/bing.html
@@ -1,23 +1,30 @@
 <html>
-  <head>
-  	<title>Leaflet</title>
-	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-	<script src="http://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-  	<script src="../layer/tile/Bing.js"></script>
-  </head>
-  <body>
-  	<div style="width:100%; height:100%" id="map"></div>
-      <script type='text/javascript'>
-        var map = new L.Map('map', {center: new L.LatLng(67.6755, 33.936), zoom: 10 });
-        var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+<head>
+	<title>Leaflet</title>
+	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
+	<script src="http://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+	<script src="../layer/tile/Bing.js"></script>
+</head>
+<body>
 
-        // for all possible values and explanations see "Template Parameters" in https://msdn.microsoft.com/en-us/library/ff701716.aspx
-        var imagerySet = "Aerial"; // AerialWithLabels | Birdseye | BirdseyeWithLabels | Road
+<div style="width:100%; height:100%" id="map"></div>
 
-        var bing = new L.BingLayer("YOUR_API_KEY", {type: imagerySet});
+<script type='text/javascript'>
+	var map = L.map('map', {
+		center: [67.6755, 33.936],
+		zoom: 10
+	});
+	var apiKey = '[YOUR_BING_MAPS_KEY]';
+	var imagerySet = 'RoadOnDemand';
+	var baseLayers = {
+		Bing: L.bingLayer(apiKey, {
+			culture: 'ru',
+			type: imagerySet
+		}).addTo(map),
+		OSM: L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png')
+	};
+	L.control.layers(baseLayers).addTo(map);
+ </script>
 
-        map.addLayer(bing);
-        map.addControl(new L.Control.Layers({'OSM':osm, "Bing":bing}, {}));
-      </script>
-  </body>
+</body>
 </html>
