L.BingLayer: support `style` option

--- a/examples/bing.html
+++ b/examples/bing.html
@@ -15,12 +15,20 @@
 		zoom: 10
 	});
 	var apiKey = '[YOUR_BING_MAPS_KEY]';
-	var imagerySet = 'RoadOnDemand';
+
+	// https://docs.microsoft.com/en-us/bingmaps/articles/custom-map-styles-in-bing-maps#midnight-commander-style
+	var styleMidnightCommander = 'me|lbc:ffffff;loc:000000_pl|bsc:144b53;boc:00000000_pt|ic:0c4152;fc:000000;sc:0c4152_trs|sc:000000;fc:000000_hg|sc:158399;fc:000000_cah|sc:158399;fc:000000_ard|sc:157399;fc:000000_mr|sc:157399;fc:000000_rl|sc:146474;fc:000000_str|fc:115166_wt|fc:021019_ar|fc:115166_g|lc:0b334d';
 	var baseLayers = {
-		Bing: L.bingLayer(apiKey, {
-			culture: 'ru',
-			type: imagerySet
+		'Bing': L.bingLayer(apiKey, {
+			// type: 'RoadOnDemand' // default
 		}).addTo(map),
+		'Bing (styled)': L.bingLayer(apiKey, {
+			style: styleMidnightCommander
+		}),
+		'Bing Aerial (ru)': L.bingLayer(apiKey, {
+			culture: 'ru',
+			type: 'AerialWithLabelsOnDemand'
+		}),
 		OSM: L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png')
 	};
 	L.control.layers(baseLayers).addTo(map);
