--- a/examples/bing.html
+++ b/examples/bing.html
@@ -16,25 +16,38 @@
 	});
 	var apiKey = '[YOUR_BING_MAPS_KEY]';
 
+	var defaults = {
+		key: apiKey,
+		detectRetina: true
+	};
+	var baseLayers = {};
+	[	'Aerial', 'AerialWithLabelsOnDemand',
+		'RoadOnDemand',
+		'CanvasDark', 'CanvasLight', 'CanvasGray'
+	].forEach(function (type) {
+		baseLayers[type] = L.bingLayer(L.extend({type: type}, defaults));
+	});
+
 	// https://docs.microsoft.com/en-us/bingmaps/articles/custom-map-styles-in-bing-maps#midnight-commander-style
 	var styleMidnightCommander = 'me|lbc:ffffff;loc:000000_pl|bsc:144b53;boc:00000000_pt|ic:0c4152;fc:000000;sc:0c4152_trs|sc:000000;fc:000000_hg|sc:158399;fc:000000_cah|sc:158399;fc:000000_ard|sc:157399;fc:000000_mr|sc:157399;fc:000000_rl|sc:146474;fc:000000_str|fc:115166_wt|fc:021019_ar|fc:115166_g|lc:0b334d';
-	var baseLayers = {
-		'Bing': L.bingLayer(apiKey, {
-			detectRetina: true,
-			// type: 'RoadOnDemand' // default
-		}).addTo(map),
-		'Bing (styled)': L.bingLayer(apiKey, {
-			detectRetina: true,
-			style: styleMidnightCommander
-		}),
-		'Bing Aerial (ru)': L.bingLayer(apiKey, {
-			detectRetina: true,
-			culture: 'ru',
-			type: 'AerialWithLabelsOnDemand'
-		}),
-		OSM: L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png')
-	};
+	baseLayers['Custom style + "ru" culture'] = L.bingLayer(L.extend({}, defaults, {
+		type: 'RoadOnDemand',
+		style: styleMidnightCommander,
+		culture: 'ru'
+	}));
+
+	baseLayers['[deprecated] Road'] = L.bingLayer(L.extend({}, defaults, {
+		type: 'Road',
+		retinaDpi: false
+	}));
+	baseLayers['[deprecated] AerialWithLabels'] = L.bingLayer(L.extend({}, defaults, {
+		type: 'AerialWithLabels',
+		retinaDpi: false
+	}));
+
+	baseLayers['RoadOnDemand'].addTo(map);
 	L.control.layers(baseLayers).addTo(map);
+	map.locate({ setView: true, maxZoom: 14 });
  </script>
 
 </body>
