--- a/examples/bing.html
+++ b/examples/bing.html
@@ -24,24 +24,24 @@
 	[	'Aerial', 'AerialWithLabelsOnDemand',
 		'RoadOnDemand',
 		'CanvasDark', 'CanvasLight', 'CanvasGray'
-	].forEach(function (type) {
-		baseLayers[type] = L.bingLayer(L.extend({type: type}, defaults));
+	].forEach(function (imagerySet) {
+		baseLayers[imagerySet] = L.bingLayer(L.extend({imagerySet: imagerySet}, defaults));
 	});
 
 	// https://docs.microsoft.com/en-us/bingmaps/articles/custom-map-styles-in-bing-maps#midnight-commander-style
 	var styleMidnightCommander = 'me|lbc:ffffff;loc:000000_pl|bsc:144b53;boc:00000000_pt|ic:0c4152;fc:000000;sc:0c4152_trs|sc:000000;fc:000000_hg|sc:158399;fc:000000_cah|sc:158399;fc:000000_ard|sc:157399;fc:000000_mr|sc:157399;fc:000000_rl|sc:146474;fc:000000_str|fc:115166_wt|fc:021019_ar|fc:115166_g|lc:0b334d';
 	baseLayers['Custom style + "ru" culture'] = L.bingLayer(L.extend({}, defaults, {
-		type: 'RoadOnDemand',
+		imagerySet: 'RoadOnDemand',
 		style: styleMidnightCommander,
 		culture: 'ru'
 	}));
 
 	baseLayers['[deprecated] Road'] = L.bingLayer(L.extend({}, defaults, {
-		type: 'Road',
+		imagerySet: 'Road',
 		retinaDpi: false
 	}));
 	baseLayers['[deprecated] AerialWithLabels'] = L.bingLayer(L.extend({}, defaults, {
-		type: 'AerialWithLabels',
+		imagerySet: 'AerialWithLabels',
 		retinaDpi: false
 	}));
 
