--- a/examples/yandex.html
+++ b/examples/yandex.html
@@ -27,22 +27,30 @@
 		.setPosition('bottomleft')
 		.setPrefix('');
 
-	var overlays = {
-		'Traffic overlay': L.yandex('overlay', { trafficControl: true })
-	};
+	function traffic () {
+		// https://tech.yandex.ru/maps/jsbox/2.1/traffic_provider
+		var actualProvider = new ymaps.traffic.provider.Actual({}, { infoLayerShown: true });
+		actualProvider.setMap(this._yandex);
+	}
 
 	var baseLayers = {
-		'Yandex map': L.yandex()
+		'Yandex map': L.yandex() // 'map' is default
 			.addTo(map),
-		'Yandex satellite': L.yandex('satellite'),
-		'Yandex hybrid': L.yandex('hybrid'),
-		'Yandex + Traffic': L.yandex('map', { trafficControl: true }),
+		'Yandex map + Traffic': L.yandex('map')
+			.on('load', traffic),
+		'Yandex satellite':  L.yandex({ type: 'satellite' }), // type can be set in options
+		'Yandex hybrid':     L.yandex('hybrid'),
 		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 		})
 	};
 
-	L.control.layers(baseLayers, overlays).addTo(map);
+	var overlays = {
+		'Traffic': L.yandex('overlay')
+			.on('load', traffic)
+        };
+
+	L.control.layers(baseLayers,overlays).addTo(map);
 	var marker = L.marker(center, { draggable: true }).addTo(map);
 	map.locate({ setView: true, maxZoom: 14 })
 		.on('locationfound',function (e) {
