L.BingLayer: move applyMaxNativeZoom-related code to separate addon
In order to use Bing.addon.applyMaxNativeZoom.js should be loaded separately (see examples/bing.html)

--- a/examples/bing.html
+++ b/examples/bing.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
 	<script src="http://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
 	<script src="../layer/tile/Bing.js"></script>
+	<script src="../layer/tile/Bing.addon.applyMaxNativeZoom.js"></script>
 </head>
 <body>
 
