--- a/examples/deferred.html
+++ b/examples/deferred.html
@@ -2,8 +2,8 @@
 <head>
 	<title>Leaflet</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-	<script src="http://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
+	<script src="http://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
 	<!--<script src="http://api-maps.yandex.ru/2.0/?load=package.map&lang=ru-RU" type="text/javascript"></script>-->
 	<script src="../layer/Layer.Deferred.js"></script>
 	<!--<script src="../layer/tile/Yandex.js"></script>-->
