--- a/examples/marker-rotate.html
+++ b/examples/marker-rotate.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Leaflet</title>
-	<link rel="stylesheet" href="http://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
 	<style>
 		/* Animates marker movements */
 		.leaflet-marker-pane > *,
