--- a/examples/yandex-kml-gpx.html
+++ b/examples/yandex-kml-gpx.html
@@ -101,7 +101,7 @@
 		'Yandex map': L.yandex()
 			.on('load',onload)
 			.addTo(map),
-		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+		'OSM': L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 		})
 	};
