--- a/examples/yandex.html
+++ b/examples/yandex.html
@@ -40,7 +40,7 @@
 			.on('load', traffic),
 		'Yandex satellite':  L.yandex({ type: 'satellite' }), // type can be set in options
 		'Yandex hybrid':     L.yandex('hybrid'),
-		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+		'OSM': L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 		})
 	};
