--- a/examples/kml.html
+++ b/examples/kml.html
@@ -2,21 +2,23 @@
 <head>
 	<title>Leaflet</title>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
-	<script src="http://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
 	<script src="../layer/vector/KML.js"></script>
 </head>
 <body>
-	<div style="width:100%; height:100%" id="map"></div>
-	<script type='text/javascript'>
-		var map = new L.Map('map', {center: new L.LatLng(58.4, 43.0), zoom: 11});
-		var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-		var track = new L.KML("KML_Samples.kml", {async: true});
-		track.on("loaded", function(e) {
+
+<div style="width:100%; height:100%" id="map"></div>
+
+<script type='text/javascript'>
+	var map = L.map('map', {center: L.latLng(58.4, 43.0), zoom: 11});
+	L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+	var track = new L.KML('KML_Samples.kml', {async: true})
+		.on('loaded', function (e) {
 			map.fitBounds(e.target.getBounds());
-		});
-		map.addLayer(track);
-		map.addLayer(osm);
-		map.addControl(new L.Control.Layers({}, {'Track':track}));
-	</script>
+		})
+		.addTo(map);
+	L.control.layers({}, {'Track':track}).addTo(map);
+</script>
+
 </body>
 </html>
