--- a/examples/marker-text.html
+++ b/examples/marker-text.html
@@ -2,17 +2,20 @@
 <head>
 	<title>Leaflet</title>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
-	<script src="http://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
 	<script src="../layer/Marker.Text.js"></script>
 </head>
 <body>
-	<div style="width:100%; height:100%" id="map"></div>
-	<script type='text/javascript'>
-		var map = new L.Map('map', {center: new L.LatLng(67.66904, 33.68595), zoom: 10});
-		map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));
-		var marker = new L.Marker.Text(map.getCenter(), 'Sweet!');
-		map.addLayer(new L.Marker(map.getCenter(), {opacity: 0.5}));
-		map.addLayer(marker);
-	</script>
+
+<div style="width:100%; height:100%" id="map"></div>
+
+<script type='text/javascript'>
+	var center = [67.6755, 33.936];
+	var map = L.map('map', {center: center, zoom: 10});
+	L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+	new L.Marker.Text(center, 'Sweet!').addTo(map);
+	L.marker(center, {opacity: 0.5}).addTo(map);
+</script>
+
 </body>
 </html>
