--- a/examples/yandex-addon-controls.html
+++ b/examples/yandex-addon-controls.html
@@ -40,7 +40,7 @@
 			typeSelector: true,
 			routeEditor: true
 		}).addTo(map),
-		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+		'OSM': L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 		})
 	};
