--- a/examples/yandex-addon-panorama.html
+++ b/examples/yandex-addon-panorama.html
@@ -37,7 +37,7 @@
 			routeEditor: true,
 			panorama: true
 		}).addTo(map),
-		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+		'OSM': L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 		})
 	};
