--- a/examples/yandex-controls.html
+++ b/examples/yandex-controls.html
@@ -57,7 +57,7 @@
 					.add('routeEditor', { float: 'right' });
 			})
 			.addTo(map),
-		'OSM': L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+		'OSM': L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 		})
 	};
