--- a/examples/yandex-addon-controls.html
+++ b/examples/yandex-addon-controls.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>L.Yandex controls (addon) example</title>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
-	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=en_RU&amp;apikey=<your API-key>" type="text/javascript"></script>
 	<script src="../layer/tile/Yandex.js"></script>
 	<script src="../layer/tile/Yandex.addon.Controls.js"></script>
