--- a/examples/bing.html
+++ b/examples/bing.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>Leaflet</title>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
-	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 	<script src="../layer/tile/Bing.js"></script>
 	<script src="../layer/tile/Bing.addon.applyMaxNativeZoom.js"></script>
 </head>
