--- a/examples/marker-rotate.html
+++ b/examples/marker-rotate.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Leaflet</title>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
+	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 	<style>
 		/* Animates marker movements */
 		.leaflet-marker-pane > *,
@@ -9,7 +9,7 @@
 			transition: transform 1.0s linear;
 		}
 	</style>
-	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet-src.js"></script>
+	<script src="https://unpkg.com/leaflet/dist/leaflet-src.js"></script>
 	<script src="../layer/Marker.Rotate.js"></script>
 </head>
 <body>
