--- a/examples/permalink.html
+++ b/examples/permalink.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>Leaflet</title>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
-	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 	<script src="../control/Permalink.js"></script>
 	<script src="../control/Permalink.Marker.js"></script>
 	<script src="../control/Permalink.Layer.js"></script>
