--- a/examples/yandex-addon-loadapi-deferred.html
+++ b/examples/yandex-addon-loadapi-deferred.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>L.Yandex LoadApi (addon) deferred example</title>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
-	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 	<script src="../layer/tile/Yandex.js"></script>
 	<script src="../layer/tile/Yandex.addon.LoadApi.js"></script>
 </head>
