--- a/examples/yandex-addon-loadapi-promise.html
+++ b/examples/yandex-addon-loadapi-promise.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 	<title>L.Yandex LoadApi (addon) promise example</title>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
-	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 	<script src="../layer/tile/Yandex.js"></script>
 	<script src="../layer/tile/Yandex.addon.LoadApi.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
