--- a/examples/deferred.html
+++ b/examples/deferred.html
@@ -54,7 +54,7 @@
 		'OpenMapSurfer': new L.DeferredLayer(layerdefs.mso)
 	};
 
-	L.control.layers(baseLayers,overlays).addTo(map);
+	L.control.layers(baseLayers, overlays, {collapsed: false}).addTo(map);
 
 	map.locate({ setView: true, maxZoom: 14 });
 </script>
