--- a/examples/gpx-speed.html
+++ b/examples/gpx-speed.html
@@ -21,7 +21,7 @@
 		maxSpeed: 100,
 		chunks: 1000
 	}).addTo(map);
-	L.control.layers({}, {'GPX':track}).addTo(map);
+	L.control.layers({}, {'GPX': track}, {collapsed: false}).addTo(map);
 </script>
 
 </body>
