--- a/examples/gpx.html
+++ b/examples/gpx.html
@@ -32,7 +32,7 @@
 			args.point.setIcon(greenIcon);
 		}
 	}).addTo(map);
-	L.control.layers({}, {'GPX':track}).addTo(map);
+	L.control.layers({}, {'GPX': track}, {collapsed: false}).addTo(map);
 </script>
 
 </body>
