--- a/examples/kml.html
+++ b/examples/kml.html
@@ -17,7 +17,7 @@
 			map.fitBounds(e.target.getBounds());
 		})
 		.addTo(map);
-	L.control.layers({}, {'Track':track}).addTo(map);
+	L.control.layers({}, {'Track': track}, {collapsed: false}).addTo(map);
 </script>
 
 </body>
