--- a/examples/yandex-addon-loadapi-deferred.html
+++ b/examples/yandex-addon-loadapi-deferred.html
@@ -22,7 +22,7 @@
 			apiParams: '<your API-key>'
 		}),
 		'(deferred) Yandex Hybrid': L.yandex('hybrid')
-	}).addTo(map);
+	}, {}, {collapsed: false}).addTo(map);
 </script>
  
 </body>
