--- a/examples/yandex-addon-loadapi-dynamic.html
+++ b/examples/yandex-addon-loadapi-dynamic.html
@@ -22,7 +22,7 @@
 			.loadApi({ apiParams: '<your API-key>' })
 			.addTo(map),
 		'Yandex Hybrid': L.yandex('hybrid')
-	}).addTo(map);
+	}, {}, {collapsed: false}).addTo(map);
 </script>
  
 </body>
