--- a/examples/yandex-addon-loadapi-promise.html
+++ b/examples/yandex-addon-loadapi-promise.html
@@ -23,7 +23,7 @@
 	L.control.layers({
 		'Yandex': L.yandex({ apiLoader: promise }).addTo(map),
 		'Yandex Hybrid': L.yandex('hybrid')
-	}).addTo(map);
+	}, {}, {collapsed: false}).addTo(map);
 
 </script>
  
