--- a/examples/yandex-controls.html
+++ b/examples/yandex-controls.html
@@ -72,7 +72,7 @@
 			})
         };
 
-	L.control.layers(baseLayers,overlays).addTo(map);
+	L.control.layers(baseLayers, overlays, {collapsed: false}).addTo(map);
 	map.locate({ setView: true, maxZoom: 14 });
 </script>
  
