--- a/examples/yandex-kml-gpx.html
+++ b/examples/yandex-kml-gpx.html
@@ -111,7 +111,7 @@
 			.on('load',onload)
         };
 
-	L.control.layers(baseLayers,overlays).addTo(map);
+	L.control.layers(baseLayers, overlays, {collapsed: false}).addTo(map);
 </script>
  
 </body>
